ffi/lt.h

typedef struct lt_session lt_session;
typedef enum {
    LT_OK = 0,
    LT_ERR_ARG,
    LT_ERR_ENGINE,
    LT_ERR_IO,
    LT_ERR_NOT_FOUND,
    LT_ERR_BUFFER_TOO_SMALL
} lt_err;
/* —— 状态/进度查询（6）—— */
typedef struct {
    int     state;             /* libtorrent torrent_status::state；0 下载 1 完成 3 错误 4 元数据获取中。
                                  ABI100 无 paused 状态/无 flags_t：暂停以后续 torrent_paused alert 为同步点
                                  （状态停在暂停前值），暂停态由引擎层维护（§10.1 验证结论）。 */
    float   progress;          /* 0..1（已下载/总字节，metadata 前恒 0） */
    int64_t downloaded, total, down_rate, up_rate;
    int     num_peers, num_seeds;   /* 已连接数（F2） */
    int     metadata_received;      /* F2 三阶段评估前提 */
    int     paused;                 /* torrent_handle::pause() 后的 paused 标志 */
    char    name[256];         /* E28: torrent 名（metadata 就绪前为空串；NUL 结尾，
                                  截断安全——内核侧 strncpy + 预置 memset） */
    int64_t all_time_download, /* E33: 全生命周期累计下行（含历史，随 resume data
                                  持久；>= 本次 done——hashfail/断点重复收字节计入） */
            all_time_upload;   /* E33: 全生命周期累计上行（做种贡献；暂停不清零） */
} lt_torrent_status;
lt_err lt_status(lt_session* s, const char* ih, lt_torrent_status* out);
lt_err lt_piece_count(lt_session* s, const char* ih, int* out);
lt_err lt_bitfield(lt_session* s, const char* ih, uint8_t* buf, size_t cap, size_t* out_len); /* 位打包，LSB 先 */
lt_err lt_file_count(lt_session* s, const char* ih, int* out);
lt_err lt_file_progress(lt_session* s, const char* ih, int64_t* done_arr, int64_t* size_arr, int n);
/* —— 子文件优先级（BT 多文件；P1 任务级能力）——
   priority 语义同 libtorrent：0 = 不下载（skip）、1 = 低、4 = 默认、7 = 最高。
   idx_arr/prio_arr 等长（n 项，逐条 set）；n/容量必须 >= 文件数（与
   lt_file_progress 同口径，否则 BUFFER_TOO_SMALL）。需要 metadata。 */
lt_err lt_set_file_priorities(lt_session* s, const char* ih, const int* idx_arr, const int* prio_arr, int n);
lt_err lt_get_file_priorities(lt_session* s, const char* ih, int* out_arr, int n);
/* —— 富 peer（1）—— */
typedef struct {
    char     ip[64];
    uint16_t port;
    char     peer_id[64];      /* hex */
    char     client[128];
    uint32_t progress_ppm;
    int64_t  down_rate, up_rate;
    int64_t  total_download, total_upload;
    int64_t  last_active_sec;  /* <0 = 从未活跃 */
    uint32_t flags;            /* LT_PEER_* 位 */
} lt_peer;
lt_err lt_peers(lt_session* s, const char* ih, lt_peer* buf, size_t cap, size_t* out_count);
/* —— tracker 运行时增删查（E29，BT 任务级；契约与 lt_peers 同两段式）——
   cap=0/out=NULL → 探测数量（空表 → LT_OK + *out_len=0）；
   cap < 实际数 → LT_ERR_BUFFER_TOO_SMALL + *out_len=实际数；
   否则填充 min(cap, 实际数) 项 + *out_len=填充数 → LT_OK。 */
typedef struct {
    char url[256];   /* announce URL（NUL 结尾，截断安全） */
    int  tier;       /* libtorrent tier（优先级组，小者优先） */
} lt_tracker_info;
lt_err lt_list_trackers(lt_session* s, const char* ih, lt_tracker_info* out, int cap, int* out_len);
lt_err lt_remove_tracker(lt_session* s, const char* ih, const char* url); /* 无匹配 URL → LT_ERR_NOT_FOUND */
/* —— alert 队列（D31 预算 ≤12 种；扁平化值拷贝，所有权归 wrapper；溢出计数）—— */
typedef enum {
    LT_ALERT_TRACKER  = 1,
    LT_ALERT_PEER     = 2,
    LT_ALERT_ERROR    = 4,
    LT_ALERT_METADATA = 8,
    LT_ALERT_STATE    = 16,
    LT_ALERT_RESUME   = 32,
    LT_ALERT_PIECE    = 64
} lt_alert_mask;
typedef struct {
    int   kind;            /* 对应 mask 位 */
    char  ih[41];          /* 相关 torrent infohash（非 torrent 类为空串） */
    char  msg[512];        /* 人类可读；STATE 桶区分 finished/paused/error（§8.5） */
    int64_t at;            /* 毫秒时间戳 */
    int   resume_ready;    /* RESUME 时：1=可调 lt_take_resume_data */
} lt_alert;
lt_err lt_set_alert_mask(lt_session* s, const char* ih, uint32_t mask);
lt_err lt_pop_alerts(lt_session* s, lt_alert* buf, size_t cap, size_t* out_count);
lt_err lt_alerts_dropped(lt_session* s, uint32_t* out);
/* —— resume 异步流（D16：request→alert→take；数据 C++ 侧持有至 take 拷贝出）—— */
lt_err lt_request_save_resume(lt_session* s, const char* ih);
lt_err lt_take_resume_data(lt_session* s, const char* ih, uint8_t* buf, size_t cap, size_t* out_len);
/* —— 控制/限制（6）—— */
lt_err lt_ban_peer(lt_session* s, const char* ih, const char* ip, uint16_t port); /* v2：Session IP ban 实现 */
lt_err lt_add_peer(lt_session* s, const char* ih, const char* ip, uint16_t port); /* 本地 seeder 直连注入 */
lt_err lt_add_url_seed(lt_session* s, const char* ih, const char* url);
lt_err lt_add_tracker(lt_session* s, const char* ih, const char* url);
lt_err lt_set_sequential(lt_session* s, const char* ih, int on);
lt_err lt_set_limits(lt_session* s, const char* ih, int64_t down_limit, int64_t up_limit); /* 字节/秒；0=不限 */
/* —— 块读取（v2；async read_piece → 轮询取数）—— */
lt_err lt_read_piece(lt_session* s, const char* ih, int idx, uint8_t* buf, size_t buflen, size_t* out_len);
/* —— torrent 元数据导出（B-1：magnet → .torrent）——
   须已收到 metadata（magnet 场景等 status.metadata_received）；
   未就绪/任务不存在 → LT_ERR_NOT_FOUND（err_str 区分）；
   cap 不足 → LT_ERR_BUFFER_TOO_SMALL（out_len=实际长度，Rust 扩容重试）。
   产物 = 标准 .torrent bencode（info dict + announce 族；由 create_torrent(ti).generate() 生成）。 */
lt_err lt_metadata(lt_session* s, const char* ih, uint8_t* buf, size_t cap, size_t* out_len);