crates/btcore/bindings.rs

#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of lt_torrent_status"][::std::mem::size_of::<lt_torrent_status>() - 328usize];
    ["Alignment of lt_torrent_status"][::std::mem::align_of::<lt_torrent_status>() - 8usize];
    ["Offset of field: lt_torrent_status::state"]
        [::std::mem::offset_of!(lt_torrent_status, state) - 0usize];
    ["Offset of field: lt_torrent_status::progress"]
        [::std::mem::offset_of!(lt_torrent_status, progress) - 4usize];
    ["Offset of field: lt_torrent_status::downloaded"]
        [::std::mem::offset_of!(lt_torrent_status, downloaded) - 8usize];
    ["Offset of field: lt_torrent_status::total"]
        [::std::mem::offset_of!(lt_torrent_status, total) - 16usize];
    ["Offset of field: lt_torrent_status::down_rate"]
        [::std::mem::offset_of!(lt_torrent_status, down_rate) - 24usize];
    ["Offset of field: lt_torrent_status::up_rate"]
        [::std::mem::offset_of!(lt_torrent_status, up_rate) - 32usize];
    ["Offset of field: lt_torrent_status::num_peers"]
        [::std::mem::offset_of!(lt_torrent_status, num_peers) - 40usize];
    ["Offset of field: lt_torrent_status::num_seeds"]
        [::std::mem::offset_of!(lt_torrent_status, num_seeds) - 44usize];
    ["Offset of field: lt_torrent_status::metadata_received"]
        [::std::mem::offset_of!(lt_torrent_status, metadata_received) - 48usize];
    ["Offset of field: lt_torrent_status::paused"]
        [::std::mem::offset_of!(lt_torrent_status, paused) - 52usize];
    ["Offset of field: lt_torrent_status::name"]
        [::std::mem::offset_of!(lt_torrent_status, name) - 56usize];
    ["Offset of field: lt_torrent_status::all_time_download"]
        [::std::mem::offset_of!(lt_torrent_status, all_time_download) - 312usize];
    ["Offset of field: lt_torrent_status::all_time_upload"]
        [::std::mem::offset_of!(lt_torrent_status, all_time_upload) - 320usize];
};
unsafe extern "C" {
    pub fn lt_status(
        s: *mut lt_session,
        ih: *const ::std::os::raw::c_char,
        out: *mut lt_torrent_status,
    ) -> lt_err;
}
unsafe extern "C" {
    pub fn lt_piece_count(
        s: *mut lt_session,
        ih: *const ::std::os::raw::c_char,
        out: *mut ::std::os::raw::c_int,
    ) -> lt_err;
}
unsafe extern "C" {
    pub fn lt_bitfield(
        s: *mut lt_session,
        ih: *const ::std::os::raw::c_char,
        buf: *mut u8,
        cap: usize,
        out_len: *mut usize,
    ) -> lt_err;
}
unsafe extern "C" {
    pub fn lt_file_count(
        s: *mut lt_session,
        ih: *const ::std::os::raw::c_char,
        out: *mut ::std::os::raw::c_int,
    ) -> lt_err;
}
unsafe extern "C" {
    pub fn lt_file_progress(
        s: *mut lt_session,
        ih: *const ::std::os::raw::c_char,
        done_arr: *mut i64,
        size_arr: *mut i64,
        n: ::std::os::raw::c_int,
    ) -> lt_err;
}
unsafe extern "C" {
    pub fn lt_set_file_priorities(
        s: *mut lt_session,
        ih: *const ::std::os::raw::c_char,
        idx_arr: *const ::std::os::raw::c_int,
        prio_arr: *const ::std::os::raw::c_int,
        n: ::std::os::raw::c_int,
    ) -> lt_err;
}
unsafe extern "C" {
    pub fn lt_get_file_priorities(
        s: *mut lt_session,
        ih: *const ::std::os::raw::c_char,
        out_arr: *mut ::std::os::raw::c_int,
        n: ::std::os::raw::c_int,
    ) -> lt_err;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct lt_peer {
    pub ip: [::std::os::raw::c_char; 64usize],
    pub port: u16,
    pub peer_id: [::std::os::raw::c_char; 64usize],
    pub client: [::std::os::raw::c_char; 128usize],
    pub progress_ppm: u32,
    pub down_rate: i64,
    pub up_rate: i64,
    pub total_download: i64,
    pub total_upload: i64,
    pub last_active_sec: i64,
    pub flags: u32,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of lt_peer"][::std::mem::size_of::<lt_peer>() - 312usize];
    ["Alignment of lt_peer"][::std::mem::align_of::<lt_peer>() - 8usize];
    ["Offset of field: lt_peer::ip"][::std::mem::offset_of!(lt_peer, ip) - 0usize];
    ["Offset of field: lt_peer::port"][::std::mem::offset_of!(lt_peer, port) - 64usize];
    ["Offset of field: lt_peer::peer_id"][::std::mem::offset_of!(lt_peer, peer_id) - 66usize];
    ["Offset of field: lt_peer::client"][::std::mem::offset_of!(lt_peer, client) - 130usize];
    ["Offset of field: lt_peer::progress_ppm"]
        [::std::mem::offset_of!(lt_peer, progress_ppm) - 260usize];
    ["Offset of field: lt_peer::down_rate"][::std::mem::offset_of!(lt_peer, down_rate) - 264usize];
    ["Offset of field: lt_peer::up_rate"][::std::mem::offset_of!(lt_peer, up_rate) - 272usize];
    ["Offset of field: lt_peer::total_download"]
        [::std::mem::offset_of!(lt_peer, total_download) - 280usize];
    ["Offset of field: lt_peer::total_upload"]
        [::std::mem::offset_of!(lt_peer, total_upload) - 288usize];
    ["Offset of field: lt_peer::last_active_sec"]
        [::std::mem::offset_of!(lt_peer, last_active_sec) - 296usize];
    ["Offset of field: lt_peer::flags"][::std::mem::offset_of!(lt_peer, flags) - 304usize];
};
unsafe extern "C" {
    pub fn lt_peers(
        s: *mut lt_session,
        ih: *const ::std::os::raw::c_char,
        buf: *mut lt_peer,
        cap: usize,
        out_count: *mut usize,
    ) -> lt_err;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct lt_tracker_info {
    pub url: [::std::os::raw::c_char; 256usize],
    pub tier: ::std::os::raw::c_int,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of lt_tracker_info"][::std::mem::size_of::<lt_tracker_info>() - 260usize];
    ["Alignment of lt_tracker_info"][::std::mem::align_of::<lt_tracker_info>() - 4usize];
    ["Offset of field: lt_tracker_info::url"][::std::mem::offset_of!(lt_tracker_info, url) - 0usize];
    ["Offset of field: lt_tracker_info::tier"][::std::mem::offset_of!(lt_tracker_info, tier) - 256usize];
};
unsafe extern "C" {
    pub fn lt_list_trackers(
        s: *mut lt_session,
        ih: *const ::std::os::raw::c_char,
        out: *mut lt_tracker_info,
        cap: ::std::os::raw::c_int,
        out_len: *mut ::std::os::raw::c_int,
    ) -> lt_err;
}
unsafe extern "C" {
    pub fn lt_remove_tracker(
        s: *mut lt_session,
        ih: *const ::std::os::raw::c_char,
        url: *const ::std::os::raw::c_char,
    ) -> lt_err;
}
pub const lt_alert_mask_LT_ALERT_TRACKER: lt_alert_mask = 1;
pub const lt_alert_mask_LT_ALERT_PEER: lt_alert_mask = 2;
pub const lt_alert_mask_LT_ALERT_ERROR: lt_alert_mask = 4;
pub const lt_alert_mask_LT_ALERT_METADATA: lt_alert_mask = 8;
pub const lt_alert_mask_LT_ALERT_STATE: lt_alert_mask = 16;
pub const lt_alert_mask_LT_ALERT_RESUME: lt_alert_mask = 32;
pub const lt_alert_mask_LT_ALERT_PIECE: lt_alert_mask = 64;
pub type lt_alert_mask = ::std::os::raw::c_int;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct lt_alert {
    pub kind: ::std::os::raw::c_int,
    pub ih: [::std::os::raw::c_char; 41usize],
    pub msg: [::std::os::raw::c_char; 512usize],
    pub at: i64,
    pub resume_ready: ::std::os::raw::c_int,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of lt_alert"][::std::mem::size_of::<lt_alert>() - 576usize];
    ["Alignment of lt_alert"][::std::mem::align_of::<lt_alert>() - 8usize];
    ["Offset of field: lt_alert::kind"][::std::mem::offset_of!(lt_alert, kind) - 0usize];
    ["Offset of field: lt_alert::ih"][::std::mem::offset_of!(lt_alert, ih) - 4usize];
    ["Offset of field: lt_alert::msg"][::std::mem::offset_of!(lt_alert, msg) - 45usize];
    ["Offset of field: lt_alert::at"][::std::mem::offset_of!(lt_alert, at) - 560usize];
    ["Offset of field: lt_alert::resume_ready"]
        [::std::mem::offset_of!(lt_alert, resume_ready) - 568usize];
};
unsafe extern "C" {
    pub fn lt_set_alert_mask(
        s: *mut lt_session,
        ih: *const ::std::os::raw::c_char,
        mask: u32,
    ) -> lt_err;
}
unsafe extern "C" {
    pub fn lt_pop_alerts(
        s: *mut lt_session,
        buf: *mut lt_alert,
        cap: usize,
        out_count: *mut usize,
    ) -> lt_err;
}
unsafe extern "C" {
    pub fn lt_alerts_dropped(s: *mut lt_session, out: *mut u32) -> lt_err;
}
unsafe extern "C" {
    pub fn lt_request_save_resume(s: *mut lt_session, ih: *const ::std::os::raw::c_char) -> lt_err;
}
unsafe extern "C" {
    pub fn lt_take_resume_data(
        s: *mut lt_session,
        ih: *const ::std::os::raw::c_char,
        buf: *mut u8,
        cap: usize,
        out_len: *mut usize,
    ) -> lt_err;
}
unsafe extern "C" {
    pub fn lt_ban_peer(
        s: *mut lt_session,
        ih: *const ::std::os::raw::c_char,
        ip: *const ::std::os::raw::c_char,
        port: u16,
    ) -> lt_err;
}
unsafe extern "C" {
    pub fn lt_add_peer(
        s: *mut lt_session,
        ih: *const ::std::os::raw::c_char,
        ip: *const ::std::os::raw::c_char,
        port: u16,
    ) -> lt_err;
}
unsafe extern "C" {
    pub fn lt_add_url_seed(
        s: *mut lt_session,
        ih: *const ::std::os::raw::c_char,
        url: *const ::std::os::raw::c_char,
    ) -> lt_err;
}
unsafe extern "C" {
    pub fn lt_add_tracker(
        s: *mut lt_session,
        ih: *const ::std::os::raw::c_char,
        url: *const ::std::os::raw::c_char,
    ) -> lt_err;
}
unsafe extern "C" {
    pub fn lt_set_sequential(
        s: *mut lt_session,
        ih: *const ::std::os::raw::c_char,
        on: ::std::os::raw::c_int,
    ) -> lt_err;
}
unsafe extern "C" {
    pub fn lt_set_limits(
        s: *mut lt_session,
        ih: *const ::std::os::raw::c_char,
        down_limit: i64,
        up_limit: i64,
    ) -> lt_err;
}
unsafe extern "C" {
    pub fn lt_read_piece(
        s: *mut lt_session,
        ih: *const ::std::os::raw::c_char,
        idx: ::std::os::raw::c_int,
        buf: *mut u8,
        buflen: usize,
        out_len: *mut usize,
    ) -> lt_err;
}
unsafe extern "C" {
    /// B-1：torrent 元数据导出（metadata 未就绪 → LT_ERR_NOT_FOUND；
    /// cap 不足 → LT_ERR_BUFFER_TOO_SMALL + out_len=实际长度）。与 lt.h 同步。
    pub fn lt_metadata(
        s: *mut lt_session,
        ih: *const ::std::os::raw::c_char,
        buf: *mut u8,
        cap: usize,
        out_len: *mut usize,
    ) -> lt_err;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct __crt_locale_data {
    pub _address: u8,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct __crt_multibyte_data {
    pub _address: u8,
}
